--- a/main.yml
+++ b/main.yml
@@ -31,25 +31,27 @@
   become: true
 
   tasks:
-  - name: http
-    package:
-      name: httpie
-      state: latest
-  - name: install HAProxy
-    yum:
-      name=haproxy state=latest
-  - name: enable HAProxy
-    service:
+  - include_role:
       name: haproxy
-      state: started
-  - name: configure haproxy
-    template:
-      src: ./haproxy.cfg.j2
-      dest: /etc/haproxy/haproxy.cfg
-  - name: restart HAproxy
-    service:
-      name: haproxy
-      state: restarted
+  # - name: http
+  #   package:
+  #     name: httpie
+  #     state: latest
+  # - name: install HAProxy
+  #   yum:
+  #     name=haproxy state=latest
+  # - name: enable HAProxy
+  #   service:
+  #     name: haproxy
+  #     state: started
+  # - name: configure haproxy
+  #   template:
+  #     src: ./haproxy.cfg.j2
+  #     dest: /etc/haproxy/haproxy.cfg
+  # - name: restart HAproxy
+  #   service:
+  #     name: haproxy
+  #     state: restarted
 
 
 - name: deploy tomcat
@@ -58,52 +60,54 @@
   become: true
 
   tasks:
-  - name: install tomcat
-    package:
+  - include_role:
       name: tomcat
-      state: latest
-  - name: enable tomcat at boot
-    service:
-      name: tomcat
-      enabled: yes
+#   - name: install tomcat
+#     package:
+#       name: tomcat
+#       state: latest
+#   - name: enable tomcat at boot
+#     service:
+#       name: tomcat
+#       enabled: yes
 
-  - name: create ansible tomcat directory
-    file:
-      path: /usr/share/tomcat/webapps/ROOT
-      state: directory
+#   - name: create ansible tomcat directory
+#     file:
+#       path: /usr/share/tomcat/webapps/ROOT
+#       state: directory
 
-  - name: copy static index.html to tomcat webapps/ansible/index.html
-    template:
-      src: index.html.j2
-      dest: /usr/share/tomcat/webapps/ROOT/index.html
-      mode: 0644
+#   - name: copy static index.html to tomcat webapps/ansible/index.html
+#     template:
+#       src: index.html.j2
+#       dest: /usr/share/tomcat/webapps/ROOT/index.html
+#       mode: 0644
 
-  - name: start tomcat
-    service:
-      name: tomcat
-      state: started
+#   - name: start tomcat
+#     service:
+#       name: tomcat
+#       state: started
 
-- name: index.html on app 1
-  hosts: app1
-  gather_facts: false
-  become: true
+# - name: index.html on app 1
+#   hosts: app1
+#   gather_facts: false
+#   become: true
 
-  tasks:
-  - name: copy static index.html to tomcat webapps/ansible/index.html
-    template:
-      src: index.html.app1
-      dest: /usr/share/tomcat/webapps/ansible/index.html
+#   tasks:
+#   - name: copy static index.html to tomcat webapps/ansible/index.html
+#     template:
+#       src: index.html.app1
+#       dest: /usr/share/tomcat/webapps/ansible/index.html
 
-- name: index.html on app 1
-  hosts: app2
-  gather_facts: false
-  become: true
+# - name: index.html on app 1
+#   hosts: app2
+#   gather_facts: false
+#   become: true
 
-  tasks:
-  - name: copy static index.html to tomcat webapps/ansible/index.html
-    template:
-      src: index.html.app2
-      dest: /usr/share/tomcat/webapps/ansible/index.html
+#   tasks:
+#   - name: copy static index.html to tomcat webapps/ansible/index.html
+#     template:
+#       src: index.html.app2
+#       dest: /usr/share/tomcat/webapps/ansible/index.html
 
 - name: deploy postgres
   hosts: apps
@@ -111,30 +115,32 @@
   become: true
   hosts: appdbs
   tasks:
-  - name: install progress
-    command: "yum install -y postgresql-server"
+  - include_role:
+      name: postgres
+#   - name: install progress
+#     command: "yum install -y postgresql-server"
 
-  #- name: install postgres
-  #  yum:
-  #    name: postgresql-server
-  #    state: latest
-  - name: enable apache at boot
-    service:
-      name: postgresql
-      enabled: yes
-  - name: tell user to finish setting up postgres
-    debug:
-      msg: "Either uncomment the postgres setup or manually login and initialize"
+#   #- name: install postgres
+#   #  yum:
+#   #    name: postgresql-server
+#   #    state: latest
+#   - name: enable apache at boot
+#     service:
+#       name: postgresql
+#       enabled: yes
+#   - name: tell user to finish setting up postgres
+#     debug:
+#       msg: "Either uncomment the postgres setup or manually login and initialize"
 
- # only run the next 2 tasks once!
-#  - name: initilize postgres
-#    command: postgresql-setup initdb
-#  - name: initilize postgres some more
-#    command: chkconfig postgresql on
-  - name: start postgres
-    service:
-      name: postgresql.service
-      state: started
+#  # only run the next 2 tasks once!
+# #  - name: initilize postgres
+# #    command: postgresql-setup initdb
+# #  - name: initilize postgres some more
+# #    command: chkconfig postgresql on
+#   - name: start postgres
+#     service:
+#       name: postgresql.service
+#       state: started
 
 - name: deploy apache
   hosts: apps
@@ -142,15 +148,17 @@
   become: true
   hosts: apps
   tasks:
-  - name: install apache
-    yum:
-      name: httpd
-      state: latest
-  - name: enable apache at boot
-    service:
-      name: httpd
-      enabled: yes
-#  - name: start apache
-#    service:
-#      name: httpd
-#      state: started
+  - include_role:
+      name: postgres
+#   - name: install apache
+#     yum:
+#       name: httpd
+#       state: latest
+#   - name: enable apache at boot
+#     service:
+#       name: httpd
+#       enabled: yes
+# #  - name: start apache
+# #    service:
+# #      name: httpd
+# #      state: started
