--- a/roles/tomcat/tasks/main.yml
+++ b/roles/tomcat/tasks/main.yml
@@ -1,2 +1,45 @@
 ---
-# tasks file for tomcat
+- name: install tomcat
+  package:
+    name: tomcat
+    state: latest
+- name: enable tomcat at boot
+  service:
+    name: tomcat
+    enabled: yes
+
+- name: create ansible tomcat directory
+  file:
+    path: /usr/share/tomcat/webapps/ROOT
+    state: directory
+
+- name: copy static index.html to tomcat webapps/ansible/index.html
+  template:
+    src: index.html.j2
+    dest: /usr/share/tomcat/webapps/ROOT/index.html
+    mode: 0644
+
+- name: start tomcat
+  service:
+    name: tomcat
+    state: started
+
+- name: index.html on app 1
+  hosts: app1
+  gather_facts: false
+  become: true
+
+- name: copy static index.html to tomcat webapps/ansible/index.html
+  template:
+    src: index.html.app1
+    dest: /usr/share/tomcat/webapps/ansible/index.html
+
+- name: index.html on app 1
+  hosts: app2
+  gather_facts: false
+  become: true
+
+- name: copy static index.html to tomcat webapps/ansible/index.html
+  template:
+    src: index.html.app2
+    dest: /usr/share/tomcat/webapps/ansible/index.html
