--- a/roles/postgres/tasks/main.yml
+++ b/roles/postgres/tasks/main.yml
@@ -1,18 +1,23 @@
 ---
-- name: install progress
-  command: "yum install -y postgresql-server"
-
-    #- name: install postgres
-    #  yum:
-    #    name: postgresql-server
-    #    state: latest
+- name: install postgres
+  yum:
+    name: postgresql-server
+    state: latest
 - name: enable apache at boot
   service:
     name: postgresql
     enabled: yes
-- name: tell user to finish setting up postgres
-  debug:
-    msg: "Either uncomment the postgres setup or manually login and initialize"
+# - name: tell user to finish setting up postgres
+#   debug:
+#     msg: "Either uncomment the postgres setup or manually login and initialize"
+
+- name: initialize postgres
+  shell: 
+    postgresql-setup initdb
+    chkconfig postgresql on
+  args:
+    creates: /var/lib/pgsql/data/PG_VERSION
+  become: true
 
  # only run the next 2 tasks once!
 #  - name: initilize postgres
