--- a/roles/apache/tasks/main.yml
+++ b/roles/apache/tasks/main.yml
@@ -7,7 +7,7 @@
   service:
     name: httpd
     enabled: yes
-#  - name: start apache
-#    service:
-#      name: httpd
-#      state: started
+- name: start apache
+  service:
+      name: httpd
+      state: started
