--- a/roles/haproxy/tasks/main.yml
+++ b/roles/haproxy/tasks/main.yml
@@ -12,7 +12,7 @@
     state: started
 - name: configure haproxy
   template:
-    src: ./haproxy.cfg.j2
+    src: haproxy.cfg.j2
     dest: /etc/haproxy/haproxy.cfg
 - name: restart HAproxy
   service:
