--- a/roles/tomcat/tasks/main.yml
+++ b/roles/tomcat/tasks/main.yml
@@ -24,22 +24,32 @@
     name: tomcat
     state: started
 
-- name: index.html on app 1
-  hosts: app1
-  gather_facts: false
-  become: true
+# - name: index.html on app 1
+#   hosts: app1
+#   gather_facts: false
+#   become: true
+- name: create ansible webapps/ansible directory
+  file:
+    path: /usr/share/tomcat/webapps/ansible
+    state: directory
 
 - name: copy static index.html to tomcat webapps/ansible/index.html
+  when: inventory_hostname == "app1"
+  become: true
   template:
+    force: yes
     src: index.html.app1
     dest: /usr/share/tomcat/webapps/ansible/index.html
 
-- name: index.html on app 1
-  hosts: app2
-  gather_facts: false
-  become: true
+# - name: index.html on app 1
+#   hosts: app2
+#   gather_facts: false
+#   become: true
 
 - name: copy static index.html to tomcat webapps/ansible/index.html
+  when: inventory_hostname == "app2"
+  become: true
   template:
+    force: yes
     src: index.html.app2
     dest: /usr/share/tomcat/webapps/ansible/index.html
