--- a/main.yml
+++ b/main.yml
@@ -15,7 +15,7 @@
 
 - name: configuration
   hosts: all
-  gather_facts: false # remove later! speeds up testing
+  gather_facts: false
   become: true
 
   tasks:
@@ -28,7 +28,7 @@
 - name: deploy haproxy
   tags: haproxy
   hosts: frontends
-  gather_facts: false # remove later! speeds up testing
+  gather_facts: false
   become: true
 
   tasks:
