hosts loop in jinja template

--- a/roles/postgres/tasks/main.yml
+++ b/roles/postgres/tasks/main.yml
@@ -15,7 +15,7 @@
     chkconfig postgresql on
   args:
     creates: /var/lib/pgsql/data/PG_VERSION
-  become: true
+  # become: true
 
 - name: start postgres
   service:
